fix(consonant): bug fix for button spacing

--- a/templates/consonant/consonant.css
+++ b/templates/consonant/consonant.css
@@ -367,14 +367,6 @@ p.button-container {
   justify-content: flex-start;
 }
 
-p.button-container a.button {
-  margin: 0 0 12px 0;
-}
-
-p.button-container > *:not(:last-child) {
-  margin-right: 14px;
-}
-
 .center p.button-container,
 .section-wrapper > div > p.button-container {
   justify-content: center;
@@ -382,6 +374,38 @@ p.button-container > *:not(:last-child) {
 
 .right p.button-container {
   justify-content: flex-end;
+}
+
+p.button-container a.button {
+  margin: 0 0 12px 0;
+}
+
+p.button-container > a.button:not(:last-child),
+p.button-container > strong:not(:last-child),
+p.button-container > em:not(:last-child) {
+  margin-right: 14px;
+}
+
+.center p.button-container > a.button,
+.center p.button-container > strong,
+.center p.button-container > em,
+.section-wrapper > div > p.button-container > a.button,
+.section-wrapper > div > p.button-container > strong,
+.section-wrapper > div > p.button-container > em {
+  margin-right: 7px;
+  margin-left: 7px;
+}
+
+.right p.button-container > a.button,
+.right p.button-container > strong,
+.right p.button-container > em {
+  margin-right: 0;
+}
+
+.right p.button-container > a.button:not(:first-child),
+.right p.button-container > strong:not(:first-child),
+.right p.button-container > em:not(:first-child) {
+  margin-left: 14px;
 }
 
 a.button.xlarge:any-link {
